package template;

/**
 * 红糖豆浆
 */
public class BrownSugar extends SoybeanMilk{
    @Override
    protected void add() {
        System.out.println("加入一批上好的红糖");
    }
}
