package template;

/**
 * 花生豆浆类
 */
public class Peanut extends SoybeanMilk {
    @Override
    protected void add() {
        System.out.println("加入一批上好的花生");
    }
}
