package template;

/**
 * 纯豆浆
 */
public class Pure extends SoybeanMilk{

    @Override
    protected void add() {

    }

    @Override
    public boolean isAdd() {
        return false;
    }
}
